--- a/assignment1/WebPageMaster.Master
+++ b/assignment1/WebPageMaster.Master
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Assignment 1</a>
+            <a class="navbar-brand" href="http://comp2007assignment1.azurewebsites.net/">Assignment 1</a>
         </div><!-- /.container-fluid -->
     </div><!-- /.navbar-collapse -->
 </nav>
